--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ cbpro = "0.4.0"
 tokio = { version = "0.2.9", features = ["full"] }
 serde_json = "1.0.44"
 futures = "0.3.1"
-tokio-postgres = { version = "0.5.1", features = ["with-chrono-0_4"] }
+tokio-postgres = { version = "0.5.1", features = ["with-chrono-0_4", "with-uuid-0_8"] }
 chrono = "0.4.10"
+uuid = { version = "0.8.1", features = ["serde", "v4"] }
