--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 cbpro = "0.4.0"
 tokio = { version = "0.2.9", features = ["full"] }
 serde_json = "1.0.44"
-futures = "0.3.1"
+futures = { version = "0.3.1", features = ["async-await"] }
 tokio-postgres = { version = "0.5.1", features = ["with-chrono-0_4", "with-uuid-0_8"] }
 chrono = "0.4.10"
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
