--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,12 @@ version: "3.7"
 services:
   cbbot:
     image: kgeronim/cbbot:latest
-    restart: always
-    environment:
+    depends_on:
+      - timescaledb
+    deploy:
+      replicas: 1
+      restart_policy:
+        condition: on-failure
     secrets:
       - cb_secret
       - cb_pass
@@ -12,10 +16,10 @@ services:
       - pg_user
       - pg_password
       - pg_database
+    command: ["BTC-USD", "500", "65", "75", "-d", "--sandbox"]
 
   timescaledb:
     image: timescale/timescaledb:latest-pg11
-    restart: always
     volumes:
       - data:/var/lib/postgresql/data
     ports:
@@ -31,7 +35,6 @@ services:
 
   adminer:
     image: adminer
-    restart: always
     ports:
       - 8080:8080
 
