--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ chrono = "0.4.10"
 log = { version = "0.4", features = ["std", "serde"] }
 simple_logger = "1.5.0"
 clap = "2.33.0"
+rust_decimal = "1.2.0"
